# Enumeration-of-Maximal-Induced-Bicliques

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  ParallelPerfcomp.cpp  README.md  adjlst.c  adjlst.h  draw.cpp  drawMat.cpp  example.cpp  genFile.c  genPerf.cpp  isproper.cc  makefile  maximalIndependantSets.c  plot.sh  subgraph.c  subgraph.h  test_adjlst.c  test_bk.cpp  texte déposé.txt  visualization.c
CPP_version/: a.out  graph.cpp  graph.hpp
TESTS/: test_adjlst.c  test_subgraph.c
Tomita/: a.out  out2  tomita.c++  tomitaList.cpp
apps/: Bron-Kerbosch.cpp  CMakeLists.txt  bronKerbosch.cpp  comparaison1_2.cpp  complementary.cpp  draw.cpp  file.cpp  genPerf.cpp  genPerfIndSets.cpp  genPerfScalabilite.cpp  getBicliques.cpp  maxIndSets.cpp  maxIndSetsSingleCall.cpp  prog.cpp  readFile.cpp  scalabilite.cpp
data/: .~lock.musae_FR_edges.csv#  facebook.csv  gnu_script.gp  gnu_script_matlst.gp  gnu_script_parallel.gp  plot_matlst.sh  plot_parallel.sh  stat.py  sum.py
data/algos_comp/: plotAlgos0,001p.sh  plotAlgos0,1p.sh
data/autre/: plotPerf.sh
data/iterations/: plotIterations.sh
data/maxIndSets/: plotMaxIndSets.sh
data/scalabilite/: plotScalabilite.sh
degenerescence/: #include<iostream>.cpp  degenrescence.cpp  new.cpp  out0  out1
graphes/: CMakeLists.txt
graphes/include/: adj.hpp  bron-kerbosch.hpp  bron-kerbosch1.hpp  bron-kerbosch2.hpp  graphes.hpp  graphesImpl.hpp  suffixTree.hpp  visualisation.hpp
graphes/src/: graphes.cpp  suffixTree.cpp  visualisation.cpp
graphesMat/: CMakeLists.txt
graphesMat/include/: graphesMat.hpp  suffixTree.hpp  visualisationMat.hpp
graphesMat/src/: graphesMat.cpp  suffixTree.cpp  visualisationMat.cpp
include/: Graph.hpp  GraphList.hpp  GraphMat.hpp  ReadFile.hpp  StructGraph.hpp  SuffixTree.hpp  Utility.hpp  graph.hpp  grapheLst.hpp  grapheMat.hpp  suffixTree.hpp  visualisation.hpp
networks/: 20000.csv  edges.csv  hexagone.csv
plot/: gnu_script.gp  plot.sh
src/: Bicliques.cpp  Bron-Kerbosch.cpp  Bron-Kerbosch2.cpp  CMakeLists.txt  File.cpp  Graph.cpp  GraphList.cpp  GraphMat.cpp  IndependentSets.cpp  Initialization.cpp  ReadFile.cpp  StructGraph.cpp  Subgraph.cpp  SuffixTree.cpp  Tomita.cpp  Utility.cpp  Visualisation.cpp  genPerf.cpp  graph.cpp  graphLst.cpp  graphMat.cpp  main.cpp  suffixTree.cpp  visualisation.cpp
test/: CMakeLists.txt  Graph_Tests.cpp
test/graph/: CMakeLists.txt  GraphLst_test.cpp  GraphMat_test.cpp
test/src/: areConnected.cpp  genSubgraph.cpp  getBilciques.cpp  getMaxIndSets.cpp  isProper.cpp  minDist.cpp  shortestPath.cpp  suffTree.cpp
tests/: CMakeLists.txt  graph_tests.cpp  graph_tests.hpp
tests/lst/: areConnected.cpp  getBilciques.cpp  isProper.cpp  minDist.cpp  shortestPath.cpp
tests/mat/: areConnectedMAT.cpp  genSubgraphMAT.cpp  getBilciquesMAT.cpp  getMaxIndSetsMAT.cpp  isProperMAT.cpp  minDistMAT.cpp  shortestPathMAT.cpp  suffTreeMAT.cpp
tests/src/: areConnected.cpp  areConnectedTests.cpp  bron-kerbosch1.cpp  bron-kerbosch2.cpp  findMinVertex.cpp  genSubgraph.cpp  genSubgraphTests.cpp  getBicliquesParallel.cpp  getBilciques.cpp  getBilciquesTests.cpp  getMaxIndSets.cpp  getMaxIndSetsTests.cpp  isProper.cpp  isProperTests.cpp  minDist.cpp  minDistTests.cpp  shortestPath.cpp  shortestPathTests.cpp  suffTree.cpp  test_bk.cpp  verticesdegrees.cpp
